Basic cast/instanceof support